# IntentAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PYPI_DESCRIPTION.md  README.md  debug_test.py  pyproject.toml  test_pypi_package.py
.github/workflows/: tests.yml
docs/: api.rst  benchmarks.md  cli.rst  conf.py  index.md  index.rst  installation.md
docs/advanced/: performance.md
examples/: benchmark_complex_test.py  benchmark_report.csv  comprehensive_example.py  demo_dynamic_system.py  demo_enhanced_features.py  run_all_tests.py  test_local_code.py  test_published_package.py  test_pypi_package.py
intentai/: __init__.py  cli.py  core.py  decorator.py  detector.py  types.py
tests/: test_detector.py
tool_detector/: __init__.py  decorator.py  detector.py
